--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
   top: 0;
   background: var(--white);
   box-shadow: 0 5px 20px 2px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 .nav__container {
   width: 100%;
@@ -62,4 +63,144 @@ a {
   background: var(--light-black);
   border-radius: 50%;
   color: var(--white);
+}
+.row {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+.col-3 {
+  width: 25%;
+}
+
+.product {
+  padding: 25px;
+  width: 100%;
+  overflow: hidden;
+}
+.product__img {
+  width: 100%;
+  height: 350px;
+  overflow: hidden;
+}
+.product__img img {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s linear;
+  animation: imageTransition 0.5s linear;
+}
+.product__img img:hover {
+  transform: scale(1.4);
+}
+.product__name {
+  margin: 10px 0;
+  text-transform: capitalize;
+  color: #707070;
+}
+.col-6 {
+  width: 50%;
+}
+.product__discount__price {
+  text-align: right;
+}
+.product__price span {
+  color: silver;
+  font-size: 13px;
+}
+@media (max-width: 765px) {
+  .container {
+    width: 100%;
+    padding: 0 30px;
+  }
+  .col-3 {
+    width: 50%;
+  }
+}
+@media (max-width: 400px) {
+  .container {
+    width: 100%;
+    padding: 0 30px;
+  }
+  .col-3 {
+    width: 100%;
+  }
+}
+.actualPrice {
+  text-decoration: line-through;
+  color: black !important;
+  font-size: 18px !important;
+}
+.product__discount__price {
+  font-size: 18px;
+}
+.mt-100 {
+  margin-top: 100px;
+}
+.details__img {
+  width: 100%;
+  height: auto;
+  padding-right: 30px;
+}
+.details__img img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 25px;
+}
+.details__name {
+  font-size: 28px;
+  color: #2c2c2c;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+.details__actual {
+  text-decoration: line-through;
+  font-size: 20px;
+}
+.details__discount {
+  margin-left: 20px;
+  font-size: 20px;
+}
+.details__prices {
+  margin: 10px 0;
+}
+.details__indDec {
+  display: flex;
+}
+.dec,
+.inc,
+.quantity {
+  width: 60px;
+  height: 60px;
+  border: 1px solid silver;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+.quantity {
+  border-left: none;
+  border-right: none;
+}
+.inc,
+.dec:hover {
+  cursor: pointer;
+}
+.btn-default {
+  margin-left: 10px;
+  width: 100%;
+  border: none;
+  background: var(--main);
+  color: var(--white);
+  outline: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 18px;
+}
+.details_p {
+  margin-top: 15px;
+}
+.details_p h4 {
+  font-weight: 600;
+  margin-bottom: 10px;
+  font-size: 18px;
 }
